--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		
 	</head>
 	<body>
- 		<div id="title_bar">Phone<strong>Gap</strong> Training App</div>
+ 		<div id="title_bar">Bob<strong>Gap</strong> Jones App</div>
 
 		<div id="welcome" class="view">
 		  <div class="app_button" id="map_button">Show My Location</div>
@@ -35,7 +35,7 @@
               <img id="static_map" src="assets/img/staticmap.png">
 		  </div>
 		  <p>This is where you are</p>
-		  <div class="app_button" id="welcome_button">Go Back</div>
+		  <div class="app_button" id="welcome_button">Go Home You Loser</div>
 		</div>
 
 		<div id="settings" class="view">
