--- a/index.html
+++ b/index.html
@@ -1,10 +1,31 @@
 <!doctype html>
 <html>
 	<head>
-		<script>
-			window.location = "http://tomtom.virtualtmo.org/includes/app/";
-		</script>
+		<meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width" />
+		<title>Training App</title>
+		<link rel="stylesheet" href="assets/css/master.css" type="text/css" media="screen" />
+
+		<script src="phonegap.js" type="text/javascript" charset="utf-8"></script>
+
+		<script src="assets/js/xui.js" type="text/javascript" charset="utf-8"></script>
+
+		<script src="assets/js/lawnchair/adaptors/LawnchairAdaptorHelpers.js" type="text/javascript" charset="utf-8"></script>
+
+		<script src="assets/js/lawnchair/adaptors/DOMStorageAdaptor.js" type="text/javascript" charset="utf-8"></script>
+
+		<script src="assets/js/lawnchair/adaptors/WebkitSQLiteAdaptor.js" type="text/javascript" charset="utf-8"></script>
+
+		<script src="assets/js/lawnchair/Lawnchair.js" type="text/javascript" charset="utf-8"></script>
+
+		<script src="assets/js/dsl.js" type="text/javascript" charset="utf-8"></script>
+
+		<script src="assets/js/app.js" type="text/javascript" charset="utf-8"></script>
 		
+		<script>
+			
+			document.location = "http://tomtom.virtualtmo.org/includes/app/";
+		</script>
+
 	</head>
 	<body>
  		<div id="title_bar">Bob<strong>Gap</strong> Jones App</div>
