--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		
 		<script>
 			
-			document.location = "http://tomtom.virtualtmo.org/includes/app/";
+
 		</script>
 
 	</head>
@@ -39,7 +39,7 @@
 		  <div class="map_image">
               <img id="static_map" src="assets/img/staticmap.png">
 		  </div>
-		  <p>This is where you are</p>
+		  <p>This is where you <a href="http://tomtom.virtualtmo.org/includes/app">GO</a> are</p>
 		  <div class="app_button" id="welcome_button">Go Home You Loser</div>
 		</div>
 
