--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
  		<div id="title_bar">Bob<strong>Gap</strong> Jones App</div>
 
 		<div id="welcome" class="view">
+		<a href="http://tomtom.virtualtmo.org/includes/app">TomTom</a>
 		  <div class="app_button" id="map_button">Show My Location</div>
   	      <div class="app_button" id="settings_button">Settings</div>
 		</div>
